# GearboxNext

./: CMakeLists.txt  README.md  README_ru.md
include/: GearBoxPanel.h  GearsPanel.h  MainWindow.h
resources/: rc.rc
src/: GearBoxPanel.cpp  GearsPanel.cpp  MainWindow.cpp  main.cpp
